# VirSorter2

./: .gitignore  .travis.yml  Changelog  Changelog.md  Dockerfile  MANIFEST.in  README.md  Singularity  intall-deps  pyproject.toml  setup.cfg  setup.py  vs2-external-deps.yaml
.githooks/: commit-msg
.github/workflows/: test.yaml
test/: 4seq.fa  8seq.fa  test-for-sop.fa  test.sh
virsorter/: Snakefile  __init__.py  config.py  template-config-original.yaml  template-config.yaml  utils.py  virsorter.py
virsorter/envs/: vs2.yaml
virsorter/rules/: .classify.smk.swp  classify.smk  extract-feature.smk  preprocess.smk  setup-retry.smk  setup.smk  train-feature.smk  train-model.smk  unused.smk
virsorter/scripts/: add-extra-to-fullseq-fasta-header.py  add-extra-to-lt2gene-fasta-header.py  add-extra-to-table.py  add-hallmark-to-taxfile.py  add-length-to-table.py  add-suffix-seqname-keep-desc.py  add-suffix-seqname.py  add-unaligned-to-hmm-featrues.py  circular-extend.py  circular-linear-split.py  circular-remove-partial-gene.py  classify-trimed.py  classify.py  diff-seq.py  echo.py  extract-feature-from-gff.py  extract-feature-from-hmmout.py  extract-provirus-seqs.py  filter-score-table.py  filter-seqs-by-gff.py  filter-table-and-add-suffix-to-seqname.py  finalize-boundary-file.py  get-hallmark-cnt-for-each-seq.py  get-list-from-seqfile.py  get-seq-w-lt2gene-w-hallmark.py  get-seq-w-lt2genes-w-hallmark.py  keep-original-seq.py  make-affi-contigs-tabfile-on-split-gff.py  make-affi-contigs-tabfile.py  merge-clf-from-groups.py  merge-clf-trim-from-groups.py  (+26 more)
(+15 files in other folders)
