[metadata]
name = virsorter
version = 2.2
description = 'VirSorter2: A multi-classifier, expert-guided approach to detect diverse DNA and RNA virus genomes'
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = 'https://github.com/jiarong/VirSorter2'
license = GPL-2
license_file = LICENSE
author = Jiarong Guo
author_email = guojiaro@gmail.com
classifiers = Topic :: Scientific/Engineering :: Bioinformatics

[options]
packages = virsorter
include_package_data = True  # include all files in MANIFEST.in
#install_requires = # install via conda instead
python_requires = >=3.6

[options.entry_points]
console_scripts =
    virsorter = virsorter.virsorter:cli

[bdist_wheel]
universal = 1
